# omgmt-mono

nix/: rust.nix
order-service/: Cargo.nix  Cargo.toml  flake.nix  result-bin
order-service/src/: data.rs  main.rs  product.rs
