[package]
name = "order-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
serde = { version = "1.0.206", features = ["derive"] }
surrealdb = { version = "1.5.4", features = ["kv-mem"] }
tokio = { version = "1.39.2", features = ["full"] }
